--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/dompurify": "^3.2.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
+    "github-markdown-css": "^5.8.1",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.344.0",
+    "marked": "^16.2.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-emoji": "^5.0.2",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
