--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "remark-emoji": "^5.0.2",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
     "react-dom": "^18.3.1",
     "reactflow": "^11.11.4"
   },
